--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "electron-vue-vite",
-  "version": "28.1.0",
-  "main": "dist-electron/main/index.js",
-  "description": "Really simple Electron + Vue + Vite boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
-  "license": "MIT",
-  "private": true,
-  "keywords": [
-    "electron",
-    "rollup",
-    "vite",
-    "vue3",
-    "vue"
-  ],
-  "debug": {
-    "env": {
-      "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344/"
-    }
-  },
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && electron-builder",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "electron": "^29.1.1",
-    "electron-builder": "^24.13.3",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.5",
-    "vite-plugin-electron": "^0.28.4",
-    "vite-plugin-electron-renderer": "^0.14.5",
-    "vue": "^3.4.21",
-    "vue-tsc": "^2.0.6"
-  }
+	"name": "coross-hair",
+	"version": "0.1.0",
+	"main": "dist-electron/main/index.js",
+	"description": "图片准星软件",
+	"author": "SnhAenIgseAl",
+	"license": "MIT",
+	"private": true,
+	"keywords": [
+		"electron",
+		"rollup",
+		"vite",
+		"vue3",
+		"vue"
+	],
+	"debug": {
+		"env": {
+			"VITE_DEV_SERVER_URL": "http://127.0.0.1:3344/"
+		}
+	},
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc --noEmit && vite build && electron-builder",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^5.0.4",
+		"electron": "^29.1.1",
+		"electron-builder": "^24.13.3",
+		"typescript": "^5.4.2",
+		"vite": "^5.1.5",
+		"vite-plugin-electron": "^0.28.4",
+		"vite-plugin-electron-renderer": "^0.14.5",
+		"vue": "^3.4.21",
+		"vue-tsc": "^2.0.6"
+	},
+	"dependencies": {
+		"axios": "^1.7.9",
+		"element-plus": "^2.9.5",
+		"path": "^0.12.7",
+		"pinia": "^3.0.1",
+		"pinia-plugin-persistedstate": "^4.2.0",
+		"vue-router": "^4.5.0"
+	}
 }
