--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"path": "^0.12.7",
 		"pinia": "^3.0.1",
 		"pinia-plugin-persistedstate": "^4.2.0",
+		"tdesign-vue-next": "^1.10.7",
 		"vue-router": "^4.5.0"
 	}
 }
